# agent_based_simulation

./: .gitignore  Cargo.toml  README.md  config.toml  run_simulation.sh  sim.err  sim.out
src/: main.rs
src/gla_package/: agent_based.rs  gla.rs  mod.rs  simulate.rs
