[package]
name = "agent_based_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
easybench = "1.1.1"
peroxide = "0.34.0"
rayon = "1.7.0"
ndarray = "*"
optimize = "*"
csv = "1.2.2"
serde = { version = "*", features = ["derive"] }
indicatif = "0.17.5"
